Add the text : Sable, digue, océan et plénitude.

--- a/main.lyx
+++ b/main.lyx
@@ -1589,6 +1589,427 @@ Chapitre 4
 \end_layout
 
 \begin_layout Section*
+Sable, digue, océan et plénitude
+\end_layout
+
+\begin_layout Standard
+Bien le bonjour, chères lectrices et chers lecteurs.
+ Quel jour est-il, allez-vous bien et fait-il beau ? En attendant vos réponses
+ et vos nouvelles, que nous apportera le doux vent de ce printemps ligérien,
+ apprêtez-vous à recevoir les nôtres, de nouvelles.
+ Je vous écris un vendredi – celui du 20
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011 – l'oreille tendue, écoutant le bourdonnement d'un train.
+ Que la ligne Angers-Nantes est passante ; nos bivouacs et nos siestes en
+ sont témoins.
+ M'enfin, ces bruits de métaux se frottant à vive allure sont plutôt paisibles,
+ agréables, familiers ; tout comme nos jours et nos nuits...
+\end_layout
+
+\begin_layout Standard
+Où en étions-nous ? Quelqu'un qui suit ? Nous en étions tout juste à Amboise,
+ et nous finissions le deuxième tiers de notre descente ligérienne.
+ Avant plus de détails, sachez que le troisième tiers fût bon, à l'égal
+ des deux autres, mais à sa manière.
+ Le vendredi 13
+\begin_inset space ~
+\end_inset
+
+mai – au lendemain duquel je vous ai laissé – fût un n\SpecialChar \nobreakdash-
+ième jour de repos.
+ Nos godillots ont marqué la jolie ville touristique d'Amboise.
+ Nos esprits et nos imaginations y ont exquisément vagabondé : au Clos
+\begin_inset space ~
+\end_inset
+
+Lucé – dernière demeure de feu le brillant Léonard
+\begin_inset space ~
+\end_inset
+
+de
+\begin_inset space ~
+\end_inset
+
+Vinci – et à la médiathèque – repère à journaux et à BD.
+ Puis, les coups de pagaies se sont de nouveau déroulés ; nos bras forts
+ et habitués s'en délassant.
+\end_layout
+
+\begin_layout Standard
+Vu d'une carte ou vu du ciel : après Amboise, il y a Tours ; après Tours,
+ Angers ; après Angers, Nantes ; et enfin, l'estuaire de Loire.
+ Vu d'en dessous – à fleur d'eau, au ras des vaguelettes – c'est amplement
+ plus subtil, bouillonnant, diversifié.
+ Et ardu à écrire.
+ Nous n'avons pas pu tout goûter, tout sentir, tout apprécier à sa juste
+ valeur et nous émerveiller de tout.
+ Faisant l'impasse sur les vignobles, les châteaux de Loire et toutes les
+ villes traversées, nous ne pouvons vous offrir qu'un fade abrégé.
+\end_layout
+
+\begin_layout Standard
+D'Amboise à Lavau\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loire (notre point de chute), la règle mesure quelques
+ 250
+\begin_inset space ~
+\end_inset
+
+kilomètres qui défileront en 10
+\begin_inset space ~
+\end_inset
+
+jours.
+ Appréciez ces nombres ronds.
+ 25
+\begin_inset space ~
+\end_inset
+
+kilomètres par jour : tout paraît simple ou presque.
+ Ce qui l'est : méditer et rêvasser, chaque jour, au cœur d'une belle nature
+ ; vivre à notre rythme, du lever au coucher ; apprécier le soleil, la pluie,
+ les nuages, les paysages ; observer et tenter de connaître, de comprendre,
+ nos 
+\begin_inset Quotes fld
+\end_inset
+
+coloca-Terre
+\begin_inset Quotes frd
+\end_inset
+
+ ; se marrer, Marie et moi, ensemble ; se baigner nus ; bivouaquer ; et
+ faire les cons ! Ce qui est moins simple : régler notre agenda avec celui
+ du monde civilisé, pour voir les copains, par-ci par-là ; s'aimer, parce
+ que le voyage 
+\begin_inset Quotes fld
+\end_inset
+
+à la dure
+\begin_inset Quotes frd
+\end_inset
+
+ et l'amour sont deux arts difficiles en eux, et d'avantage combinés ; faire
+ le feu par des matinées venteuses et humides ; lire finement le fleuve
+ pour naviguer sur son eau de sécheresse ; être aux portes de l'océan, au
+ milieu de l'estuaire, et composer avec ses marées, ses vagues, son vent,
+ sa vase, ses navires, sa force !
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Nous voilà, désormais, le 28
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011 à Savenay, petite bourgade entre Nantes et Saint\SpecialChar \nobreakdash-
+Nazaire, où habitent
+ mes chers parents.
+ Encore une fois, je ne vous épargne pas, avec ce bond dans le temps et
+ dans l'espace.
+ Cela fait une semaine – déjà – que notre aventure ligérienne s'est terminée.
+ Une semaine que nous nous reposons, Marie, moi, nos muscles, nos tendons,
+ nos nerfs et nos têtes.
+ Car, à la fin des fins, tout dans nos corps a fini pas être grippé, crispé
+ ; il nous fallait alors ce repos.
+ Cette dernière ligne droite n'était pas propice à l'écriture.
+ Maintenant reposé, laissez moi reprendre notre aventure...
+\end_layout
+
+\begin_layout Standard
+Nous avons passé Amboise le 13, Tours le 14 et Saumur le 16.
+ Les 17 et 18, nous étions aux abords d'Angers.
+ Et les 20 et 21, nous étions à Nantes et sa périphérie.
+ Nous y avons rencontré, dans cette ultime portion de Loire, – pour une
+ heure, une après-midi ou une nuit – des amis et nos familles, certains
+ pas vus depuis des années.
+ Nos incursions, dans cette humanité connue, ont été franchement plaisantes.
+ Mais les retours à la nature, à l'isolement humain, au vagabondage solitaire
+ l'ont été davantage, et plus précieux, et plus puissants.
+ Donc et sans surprise, nous avons continué, après Amboise et jusqu'à Nantes,
+ nos 
+\begin_inset Quotes fld
+\end_inset
+
+extravagances
+\begin_inset Quotes frd
+\end_inset
+
+ : baignades nues, bivouacs enfumés, contemplations et réflexions.
+\end_layout
+
+\begin_layout Standard
+Jusqu'à Nantes, les paysages ne se sont pas bouleversés et étaient formés
+ – toujours – des mêmes briques élémentaires : les plages de sables, les
+ arbres bordant le fleuve, peu de remous, un niveau d'eau bas, un ciel très
+ bleu un jour, très nuageux l'autre, mi-figue mi-raisin le troisième.
+ Des merveilles à contempler du lever au coucher.
+ Malgré tout, quelques changements notables sont apparus.
+\end_layout
+
+\begin_layout Standard
+À partir d'Amboise ou Tours, doucement, la Loire s'est endiguée et a grossi
+ en méandres, devenant en certains endroits un véritable labyrinthe d'eau,
+ de sable et de pierres.
+ Notre fil d'Ariane était alors un chapelet de bouées – rouges et vertes
+ – que nous suivions rigoureusement, pour ne pas nous perdre, ni nous ensabler.
+ Ces méandres, ce labyrinthe et ces digues forment des paysages si tranquilles
+ et si beaux.
+ Ils sont en France, à notre porte.
+ Et qui les connait ? Qui les a vus, avant de s'envoler jusqu'en des contrées
+ lointaines ?
+\end_layout
+
+\begin_layout Standard
+Je m'égare.
+ Revenons à notre Loire.
+ À écrire vrai, la sécheresse de ce printemps
+\begin_inset space ~
+\end_inset
+
+2011 a enlevé beaucoup de sa superbe, à ce grand labyrinthe.
+ Et bien souvent, de toutes les issues possibles, il n'en restait qu'une
+ ou deux tout juste praticables pour embarcations plates.
+ Cette sécheresse fût l'une des principales composantes de notre descente
+ ligérienne.
+ Elle nous a fait souffler, suer, grimacer, gémir, peiner, autant qu'elle
+ a du vous toucher (pour peu que vous tentiez de planter des patates, sur
+ un sol dur de France).
+ Très certainement, si le phénomène se poursuit, nous en rediscuterons,
+ car il titille notre curiosité.
+ Et aussi, il nous inquiète.
+\end_layout
+
+\begin_layout Standard
+Mais poursuivons.
+ Doucement, au fil de l'eau et des jours, l'estuaire s'est fait ressentir,
+ subtilement.
+ Ce fût tout un mélange : d'abord le sable, les digues, les méandres, le
+ fort vent d'ouest et avec lui, les ciels nuageux ; puis les bateaux de
+ pêche ou à voile, et les oiseaux marins par centaines ; enfin – et avec
+ une marée de plus en plus puissante – la vase, les roselières et quelques
+ échasses blanches.
+ Nous rêvions en pagayant ; et pagayions pour continuer le rêve.
+ Marie pensait au passé, de cette Loire et de ses hommes qui l'ont animée,
+ par amour et pour l'argent.
+ Elle reconstituait le siècle d'or des batelleries de Loire.
+ Elle rêvait...
+ Moi, fixant ce panorama, ses couleurs et ses odeurs, je m'égarais en des
+ endroits semblables et aimés : les marais de l'estuaire de Loire.
+ Et je rêvais...
+\end_layout
+
+\begin_layout Standard
+Les jours filèrent encore ; puis le réveil sonna.
+ Nos rêves s'éclipsèrent et Nantes – notre belle Nantes – apparut, nous
+ ouvrant ses ponts et son île, et nous amenant en son sein, aidée par une
+ marée complice.
+ C'était le samedi 21
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011, la veille de notre 
+\begin_inset Quotes fld
+\end_inset
+
+arrivée triomphale
+\begin_inset Quotes frd
+\end_inset
+
+ dans la vase de l'estuaire.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+J'essayerai de faire court et intense, autant que le fût cette arrivée.
+\end_layout
+
+\begin_layout Standard
+Le dimanche 22
+\begin_inset space ~
+\end_inset
+
+mai – au bout de 49
+\begin_inset space ~
+\end_inset
+
+jours durs et merveilleux – la fin de notre excursion s'éveilla.
+ Il était 9
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30.
+ Ce dernier départ, d'une étape d'une vingtaine de kilomètres, se fît dans
+ les meilleures conditions.
+ La veille, nous fument chaleureusement accueillis par deux tantes, un papa,
+ une maman, un casse-croûte, un éléphant mécanique
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+À Nantes, 
+\begin_inset Quotes fld
+\end_inset
+
+La compagnie des machines de l'île
+\begin_inset Quotes frd
+\end_inset
+
+ fait s'animer de merveilleuses créatures mécaniques, dont l'éléphant.
+\end_layout
+
+\end_inset
+
+, une petite géante et un grand mexicain
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Ce jour là, la compagnie 
+\begin_inset Quotes fld
+\end_inset
+
+Royal
+\begin_inset space ~
+\end_inset
+
+de
+\begin_inset space ~
+\end_inset
+
+Luxe
+\begin_inset Quotes frd
+\end_inset
+
+ préparait, à l'abri des regards terrestres, son nouveau spectacle de rue,
+ avec ses fameux géants.
+\end_layout
+
+\end_inset
+
+ ! Tout ça ! Notre dernière nuit se fît douillette, posée sur le moelleux
+ d'un bon matelas.
+ Et le petit déjeuner fût paisible, sous les auspices de sainte Christine
+ et saint Benoît (tante et tonton).
+ Autant vous dire que nous partîmes dans d'excellentes dispositions, prêts
+ à en découdre et en finir, à fouetter les vagues et à pagayer, 
+\emph on
+ohé ohé !
+\emph default
+ petits matelots.
+\end_layout
+
+\begin_layout Standard
+Au Pellerin, il était 9
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30 lorsque notre kayak – la robuste 
+\emph on
+Louizanne
+\emph default
+ – toucha l'eau salée vaseuse.
+ 9
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30, sous une épaisse nappe de nuages, lorsque nos muscles s'enflammèrent,
+ mus par une transe joyeuse.
+ Flap flap, nos bras s'agitèrent.
+ Flap flap, l'embarcation fila cap à l'ouest, aspirée par les débuts timides
+ d'une marée descendante.
+\end_layout
+
+\begin_layout Standard
+Un paysage bouleversant s'anima alors tout azimut.
+ Et sur nos joues glissait de l'eau salée : celle des vagues de l'estuaire
+ et sûrement deux ou trois larmes de bonheur.
+ Marie et moi avions, cent et cent fois, parcouru les marais de Loire, contemplé
+ les bords de mer et scruté leurs oiseaux.
+ Nous connaissions les beautés de ces endroits ; nous nous en étions si
+ souvent émus.
+ Mais en ce jour (solennel à n'en pas douter) nous l'avons découvert, cet
+ estuaire, comme deux enfants.
+\end_layout
+
+\begin_layout Standard
+Le fleuve s'était amplement élargi, doublant ou triplant sa corpulence.
+ Et les rives – extravagantes compositions de roseaux, de gravas et de prés
+ humides – formaient deux haies d'honneur, comme pour nous accueillir.
+ Alors, entre ces rives et au cœur de cette Loire large et agitée, trempés
+ par un rideau d'une fine pluie, ballotés par les vagues et leurs creux
+ d'un mètre parfois, dans une exaltation, une transe, une panique et une
+ peur, nous jouîmes tout notre soûl de bonheur.
+ Que la Loire fût belle alors ; et qu'elle fût dure.
+\end_layout
+
+\begin_layout Standard
+Les vagues frappaient la proue de 
+\emph on
+Louizanne
+\emph default
+, trempant allègrement Marie.
+ Et le fort vent d'ouest s'opposait à nos puissants coups de pagaies.
+ Mais, à force d'endurance, les flots défilèrent et le petit port de Lavau\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loi
+re s'approcha.
+ Pourtant, la marée avait si bien baissée que nous ne trouvâmes pas tout
+ de suite l'entrée du port, cachée qu'elle était par des amas de vase.
+ Cet ultime bout de Loire s'éternisa alors, titillant nos nerfs et la patiente
+ de nos familles.
+\end_layout
+
+\begin_layout Standard
+Finalement, c'est au ras des roseaux et les jambes dans la vase, que nous
+ débarquâmes.
+ Puis, après un dernier effort à tirer notre kayak dans un pré humide (aidés
+ par le papa de Marie et ma maman), nous retrouvâmes nos familles autour
+ d'un pique-nique en fête.
+\end_layout
+
+\begin_layout Standard
+Ainsi se termina notre descente de Loire du printemps 2011.
+\end_layout
+
+\begin_layout Section*
 Le phoque et le pont
 \end_layout
 
