Add the text : Cap à l'est !

--- a/main.lyx
+++ b/main.lyx
@@ -67,6 +67,10 @@
 
 \begin_body
 
+\begin_layout Part
+Descente de la Loire
+\end_layout
+
 \begin_layout Chapter*
 Chapitre 1
 \end_layout
@@ -2190,6 +2194,451 @@ Le tête-à-tête dura dix secondes, un peu plus, un peu moins.
  Mais alors, à vingt ou cinquante mètres devant nous, la demi-tête émergea
  quelques secondes, comme un adieu.
  Et hop, la voilà repartie, plongeant dans les étincelles du soleil couchant.
+\end_layout
+
+\begin_layout Part
+Grande marche
+\end_layout
+
+\begin_layout Chapter*
+Chapitre 1
+\end_layout
+
+\begin_layout Section*
+Cap à l'est !
+\end_layout
+
+\begin_layout Standard
+Et voilà.
+ Les pagaies sont posées, le kayak est plié et rangé au fond du grenier
+ parental, et nos corps et nos têtes se laissent aller à un peu de repos.
+ Une aventure se termine ; une autre se prépare.
+ Cet entre-deux dure deux semaines : une qui clôture un beau mois de mai
+ ; une autre qui grappille le début juin, annonçant l'été à venir.
+ Au programme : les premiers jours, du repos, parce que nos muscles sont
+ crispés et nos esprits las ; les suivants, de la détente (en nature, en
+ famille...) et du travail.
+ Du travail surtout !
+\end_layout
+
+\begin_layout Standard
+D'abord, nous 
+\begin_inset Quotes fld
+\end_inset
+
+clôturons
+\begin_inset Quotes frd
+\end_inset
+
+ notre descente de Loire, en nettoyant le matériel et les vêtements, puis
+ en mettant de l'ordre dans nos papiers et écrits de voyage.
+ Et, surtout, nous préparons notre prochain périple : une grande marche,
+ direction le cap Finisterre (à la pointe nord-ouest de l'Espagne).
+ Le gros boulot préparatoire de Marie (fin 2010
+\begin_inset space ~
+\end_inset
+
+-
+\begin_inset space ~
+\end_inset
+
+début 2011) nous épargne bien du tracas : l'itinéraire est déjà très bien
+ fait ; les quelques points administratifs et logistiques sont réglés.
+ Mais que faire alors ? Une chose ! Une très grosse chose, qui nous est
+ venue de notre marche en Ardèche et de notre rencontre avec 
+\begin_inset Quotes fld
+\end_inset
+
+Olivier le kayakiste
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Faire faire un ultra-régime à nos sacs.
+ Leurs liposucer un maximum de kilos, pour avoir une chance d'arriver au
+ bout de notre aventure.
+\end_layout
+
+\begin_layout Standard
+Rappelez-vous...
+ Lors de la partie 
+\begin_inset Quotes fld
+\end_inset
+
+rando
+\begin_inset Quotes frd
+\end_inset
+
+ de notre descente ligérienne, Marie portait un sac de 14
+\begin_inset space ~
+\end_inset
+
+kilos, tandis que le mien en pesait 23.
+ Trop lourds, pas agréables et avec les dénivelés ardéchois, dangereux pour
+ nos articulations ! Nous nous étions alors promis, crachant dans nos mains,
+ que 
+\begin_inset Quotes fld
+\end_inset
+
+Non non non !
+\begin_inset Quotes frd
+\end_inset
+
+ il était 
+\begin_inset Quotes fld
+\end_inset
+
+hors de question de repartir de cette lourde manière
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Olivier – comme un Jésus – nous présenta un état d'esprit allant dans ce
+ sens : la MUL pour 
+\begin_inset Quotes fld
+\end_inset
+
+Marche Ultra Légère
+\begin_inset Quotes frd
+\end_inset
+
+
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Les adeptes de cet état d'esprit partent de quelques jours à plusieurs mois
+ (à pieds, en vélo, en kayak...), avec un barda complet, économique et surtout
+ très léger.
+ Pour en savoir plus : www.randonner-leger.org
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+En voilà une religion qui nous convient : barouder léger ; en ayant une
+ certaine autonomie et une plus grande mobilité ; en bricolant et bidouillant
+ son matériel ; en identifiant ses besoins essentiels ; et en apprenant
+ à se passer du reste (ou à trouver ce reste sur place, si besoin est).
+ De quoi rendre nos pérégrinations encore plus libertaires.
+\end_layout
+
+\begin_layout Standard
+Après moult prises de tête et 
+\begin_inset Quotes fld
+\end_inset
+
+triturages
+\begin_inset Quotes frd
+\end_inset
+
+ d'esprit, coups de ciseaux et délestages tout azimut, et grâce à l'aide
+ précieuse de notre couturière-équipementière (Monique, ma bonne mère) et
+ d'une balance de cuisine, nous voici fin prêts au départ.
+ Marie et sa protubérance dorsale perdent, dans la bataille, 6
+\begin_inset space ~
+\end_inset
+
+kilos ; moi et la mienne, environ 8
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Le sac de Marie (avec vivres + eau) = 8 kilos.
+ Le mien (avec vivres + eau) = 15 kilos.
+\end_layout
+
+\end_inset
+
+ ! Peu de régimes minceur pourraient se targuer d'une telle efficacité.
+ Malgré tout, de nettes améliorations seront à faire les prochaines fois.
+\end_layout
+
+\begin_layout Standard
+Et maintenant, en route !
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Un mois déjà.
+ Un mois que nous avons troqué nos pagaies doubles contre deux paires de
+ godillots.
+ Un mois que nous avons chargé nos deux sacs sur nos deux dos, prenant une
+ nouvelle fois la poudre d'escampette.
+\end_layout
+
+\begin_layout Standard
+De Pont\SpecialChar \nobreakdash-
+Château en Loire\SpecialChar \nobreakdash-
+Atlantique à Mézières\SpecialChar \nobreakdash-
+en\SpecialChar \nobreakdash-
+Brenne en Indre, ces godillots
+ ont tapé la poussière et l'asphalte de 550
+\begin_inset space ~
+\end_inset
+
+kilomètres de chemins, le temps de 1440
+\begin_inset space ~
+\end_inset
+
+retournements de sablier, le long d'un itinéraire fiévreux inventé par une
+ Marie folle.
+\end_layout
+
+\begin_layout Standard
+Les premières foulées se sont faites au Calvaire de Pont\SpecialChar \nobreakdash-
+Château, ont longé
+ le Sillon
+\begin_inset space ~
+\end_inset
+
+de
+\begin_inset space ~
+\end_inset
+
+Bretagne, traversé les marais de Couëron, passé la Loire par un bac, puis
+ rejoint le lac de Grand\SpecialChar \nobreakdash-
+Lieu.
+ Allant par le vieux Clisson, elles sont remontées jusqu'à la Loire, à Saint\SpecialChar \nobreakdash-
+Flor
+ent\SpecialChar \nobreakdash-
+le\SpecialChar \nobreakdash-
+Vieil, récupérant le sentier de grande randonnée n°3.
+ Parcourant les vignes, les vallons et les moulins à vent d'Anjou, vers
+ Saumur puis Montsoreau, elles sont passées en Touraine, traversant ses
+ vastes forêts et ses plaines inondées de tournesols et de blé, ponctuées
+ çà et là de cités médiévales.
+ Ces milliers de foulées sont arrivées à Mézières\SpecialChar \nobreakdash-
+en\SpecialChar \nobreakdash-
+Brenne, au pied de deux
+ mille étangs, rejointes par les traces des pneus de deux mamans, pour trois
+ petits jours de vacances bien méritées.
+\end_layout
+
+\begin_layout Standard
+De bout en bout de cet itinéraire, et de proche en proche jusqu'en Brenne,
+ la marche lente et le bivouac nous ont révélé quelques rouages d'une France
+ champêtre.
+ De plus, le bouillonnement et l'évolution de l'homme dans son vaste environneme
+nt, face au reste du 
+\begin_inset Quotes fld
+\end_inset
+
+Vivant
+\begin_inset Quotes frd
+\end_inset
+
+ et de la 
+\begin_inset Quotes fld
+\end_inset
+
+Nature
+\begin_inset Quotes frd
+\end_inset
+
+, ont fait émerger en nous mille questionnements, mille réflexions, mille
+ critiques acerbes et mille espérances.
+\end_layout
+
+\begin_layout Standard
+Ainsi, nous avons pu : admirer les hérons cendrés, pourprés et gardes bœufs
+ en marais et en étangs ; bougonner contre les élevages intensifs de poulets,
+ de pommes et d'humains (dans leurs lotissements maussades) ; accompagner
+ – à contre courant – la Loire et nombre de ses veines, nous y plongeant
+ parfois ; nous étonner du nombre de demeures bourgeoises angevines, admirant
+ quelques unes majestueuses ; et subir les caprices d'une météo ci-douce,
+ là-lourde, ci-pluvieuse et là-torride.
+ Nous avons pu aussi : découvrir un petit pays gris d'ardoise et une vaste
+ contrée blanche de tuffeau ; envier la fraîcheur d'extravagantes caves
+ et maisons troglodytes ; et nous émouvoir des regards de quelques biches,
+ cerfs, chevreuils, sangliers et blaireaux.
+ Enfin, nous avons entendu l'éveil d'un été aux grondements des moissonneuses-ba
+tteuses, coupant les blés à la faveur des fins de jours ; et avons calmé
+ ses premières chaleurs à l'ombre de grandes forêts exploitées.
+ Nous avons contemplé autant de couchers de soleil qu'il y eu de jours,
+ quelques aurores aussi et quelques nuits étoilées.
+\end_layout
+
+\begin_layout Standard
+Finissant de suivre l'est et les cœurs de tournesol, nous avons mis cap
+ au sud, laissant cependant nos pensées flotter chaotiquement en toutes
+ directions.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Ces pensées filent, voguant sur de vastes mers : celles du vagabondage,
+ du voyage, de la découverte, de l'humain.
+ Elles filent ; puis, sur quelques îlots solitaires, elles trouvent des
+ trésors.
+\end_layout
+
+\begin_layout Standard
+Des trésors, nos pas et nos coups de bâton en trouvent aussi : dans les
+ plaines ou sur les vallons, au bord des chemins, au fond des champs, au
+ cœur des forêts, sur les rivières et les étangs, et dans le lointain des
+ horizons.
+ Un ciel aux nuages massifs époustouflants ; ou un autre, déchiré et chaleureux.
+ Une rencontre sauvage inattendue ; ou une autre, humaine, simple et accueillant
+e.
+ Une senteur mouillée, fraîche, orageuse ou forestière, toujours envoûtante.
+ Un fond sonore calme et délicat ; ou un autre, bouillonnant de nature et
+ de vie.
+ Et les rayons chauds du soleil d'un matin frais, éveillant un visage embué
+ des fumées d'un café tiède.
+ Et...
+\end_layout
+
+\begin_layout Standard
+En avril et mai, nous avons réalisé la première partie de notre grande escapade
+ de 2011 : la descente de la Loire en kayak.
+ Cette épreuve fût un peu rude au début, mais facile et bucolique dans l'ensembl
+e.
+ Nous l'avons terminée dans la boue, les rires et la joie, le sourire collé
+ aux oreilles et des paillettes d'or plein les yeux (ou était-ce du sable
+ ?).
+ Un voyage bienheureux quoi !
+\end_layout
+
+\begin_layout Standard
+Puis, reposés, nous nous sommes lancés dans la seconde longueur, joyeux
+ et soulagés de retrouver la route.
+ Pourtant, dès notre départ et malgré les trésors dénichés ensuite, une
+ morosité ténue flottait autour de nous, comme la brume d'un matin sur la
+ Loire.
+ Une morosité qui nous rendait ponctuellement malheureux, attisée par les
+ duretés de la marche et du voyage : une chaleur écrasante, un temps triste
+ et mouillé, une mauvaise rencontre, un endroit glauque, ou tout simplement
+ une moins bonne journée.
+ Cette foutue morosité, nous l'avons triturée dans bien des sens : pour
+ connaître ses démons, les combattre, puis victorieux pouvoir repartir le
+ cœur en paix.
+ Amen !
+\end_layout
+
+\begin_layout Standard
+Le premier démon qui se montra à nous – petit et éphémère – fût l'outil
+ même de notre voyage : la marche.
+ Cette marche est plus impliquante, pour le corps et l'esprit, que ne le
+ furent mille coups de pagaie sur un kayak.
+ Elle est plus viscérale ; implacable métronome de tous nos gestes, nos
+ pensées, nos vies.
+ Il fallut alors, pour nos têtes et nos membres, s'y régler.
+\end_layout
+
+\begin_layout Standard
+Le second à apparaître – global et immuable – fût le genre humain dans toute
+ sa bêtise, son avidité, sa domination, son orgueil.
+ Ce démon là semble omniprésent et se tient à de solides fondations.
+ Nous avons pourtant convenu de ne jamais le laisser nous abattre mais,
+ au contraire, d'en faire le combat militant d'une vie.
+\end_layout
+
+\begin_layout Standard
+Le troisième et dernier démon s'avança en souriant, vêtu de très beaux apparats
+ ; il avait pourtant quelques airs pourris.
+ Ce démon là n'était pas agressif ; au contraire, il se montrait accueillant.
+ On l'appelait 
+\begin_inset Quotes fld
+\end_inset
+
+Chemins de Saint-Jacques-de-Compostelle
+\begin_inset Quotes frd
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Lorsqu'en 2010 nous choisîmes les 
+\begin_inset Quotes fld
+\end_inset
+
+chemins de Saint-Jacques
+\begin_inset Quotes frd
+\end_inset
+
+ comme aire de jeu pour nos déambulations libertaires, ce fût mû, assurément,
+ par notre frilosité plutôt que par leurs attraits historiques, culturels
+ et humains (même si ceux-ci sont indéniables).
+ Timides et peureux, il nous fallait au moins la facilité de ces chemins
+ ultra-empruntés, pour partir, à deux.
+\end_layout
+
+\begin_layout Standard
+Et voilà que le démon esquissait sa pourriture...
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Compostelle
+\begin_inset Quotes frd
+\end_inset
+
+, tout le monde semble l'avoir fait, connaître un tiers l'ayant fait ou
+ encore rêver de le faire.
+ Tout ce même monde va de son avis implacable et, pour situer les deux marcheurs
+ au long court que nous sommes, pète à la queue-leu-leu des questions à
+ la thématique bornée : 
+\begin_inset Quotes fld
+\end_inset
+
+Combien de kilomètres par jour ? Au total ? De temps pour le faire ? Quel
+ poids font vos sacs ? Vous dormez en gîtes ? En camping ? Mais le chemin
+ ne passe pas pas là ? Et...
+ ? Et...
+ ?
+\begin_inset Quotes frd
+\end_inset
+
+ Et merde !
+\end_layout
+
+\begin_layout Standard
+La plupart des curiosités ne s'intéressent qu'au but et aux moyens formels
+ d'y parvenir.
+ Pas de place alors à la contemplation, la déambulation, la lenteur ; mais
+ seulement à une compétitivité et une rentabilité bien de notre temps.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Qui sont ces marcheurs ? Quelles sont leurs motivations, leurs impressions
+ ?
+\begin_inset Quotes frd
+\end_inset
+
+ ne semblent pas être des interrogations pertinentes à leurs yeux, sauf
+ pour quelques marginaux ou zigues à la spiritualité bien ancrée.
+\end_layout
+
+\begin_layout Standard
+Durant ce mois, nous n'avons encore emprunté aucun 
+\begin_inset Quotes fld
+\end_inset
+
+sentier jacquaire officiel
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Pourtant, nous sentons doucement se refermer leurs clôtures sur nos âmes.
+ C'est tout de même un comble, pour deux apprentis libertaires !
 \end_layout
 
 \end_body
