Add the text : Rêveries à Grand-Lieu

--- a/main.lyx
+++ b/main.lyx
@@ -2641,5 +2641,126 @@ sentier jacquaire officiel
  C'est tout de même un comble, pour deux apprentis libertaires !
 \end_layout
 
+\begin_layout Section*
+Rêveries à Grand-Lieu
+\end_layout
+
+\begin_layout Standard
+En traçant notre itinéraire, je décidais d'un détour par le lac de Grand\SpecialChar \nobreakdash-
+Lieu.
+ Ce lac, pourtant dans notre département originel, nous le connaissions
+ peu.
+ Réputé pour sa richesse ornithologique, il est, en hiver, le plus grand
+ lac naturel de plaine de France.
+ Nous avons pris trois jours pour en faire le demi-tour par le sud.
+ De ce lac, nous n'avons vu que les abords : des marais et cultures, le
+ rendant peu visible et peu accessible.
+ Cela dit, nous ne regrettons pas la visite.
+\end_layout
+
+\begin_layout Standard
+Nous nous sommes laissés balader par des marais farceurs, aux nombreux culs-de-s
+ac.
+ Mais quel plaisir de se rendre compte de l'erreur quand on y trouve de
+ nombreux oiseaux, dont certains rarement observés, comme des guifettes
+ moustacs.
+ Quel plaisir, aussi, de s'installer pour une nuit, dans un champ rempli
+ de joncs, avec une vue lointaine sur les marais, ses vaches et ses canaux.
+ Quel plaisir, alors, de rester longuement assis, les jumelles vissées aux
+ yeux, à la recherche de l'oiseau rare.
+\end_layout
+
+\begin_layout Standard
+La patience est récompensée lorsque l'on voit : voler, au-dessus de sa tête,
+ un élégant héron pourpré ; passer, en toute hâte, un martin-pêcheur trop
+ pressé ; voler un groupe de spatules, reconnues au dernier moment ; ou
+ des hérons gardes bœufs, restant sous les pattes protectrices de bovidés.
+ On assiste également à des scènes communes, pourtant invariablement merveilleus
+es : un héron cendré qui s'envole ; une aigrette garzette en recherche de
+ nourriture ; des mouettes en grandes colonies ; des vanneaux huppés chanteurs
+ et voltigeurs.
+ Et c'est, une fois de plus, en prenant un chemin de traverse que nous sommes
+ tombés sur une insolite composition : onze cigognes blanches qui se reposaient
+ sur un arbre mort.
+\end_layout
+
+\begin_layout Standard
+Malheureusement, à Grand\SpecialChar \nobreakdash-
+Lieu se joue aussi une tragédie, dont les acteurs
+ principaux sont l'homme et sa bêtise.
+ S'y trouvent de nombreuses espèces invasives (c'est à dire : des espèces
+ exotiques à un milieu, introduites par l'homme
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Espèces introduites : volontairement ou non ; directement ou indirectement.
+\begin_inset Newline newline
+\end_inset
+
+L'écrevisse de Louisiane a été introduite 
+\emph on
+volontairement
+\emph default
+, pour palier à la peste des écrevisses décimant les espèces locales.
+\begin_inset Newline newline
+\end_inset
+
+L'ibis sacré a été introduit 
+\emph on
+involontairement
+\emph default
+ : il s'est échappé d'un parc animalier...
+\begin_inset Newline newline
+\end_inset
+
+Ces deux espèces, tout comme le ragondin, la jussie...
+ ont été introduites 
+\emph on
+directement
+\emph default
+ par l'homme.
+\begin_inset Newline newline
+\end_inset
+
+D'autres -- par exemple, le frelon asiatique -- l'ont été 
+\emph on
+indirectement
+\emph default
+ : par les échanges commerciaux mondialisés, notamment.
+\end_layout
+
+\end_inset
+
+, qui deviennent nuisibles à ce milieu) : ibis sacré, ragondin, jussie,
+ myriophylle du Brésil et écrevisse de Louisiane.
+ Cette dernière espèce, introduite en France au milieu des années
+\begin_inset space ~
+\end_inset
+
+70, est probablement la plus virulente.
+ Les écrevisses sont pêchées puis écrasées à coup de bottes, ou tuées par
+ d'autres méthodes (nous avons vu plusieurs centaines de cadavres).
+ La régulation et l'éradication de cette espèce me paraît impossible : trop
+ d'individus, reproduction très rapide, espèce très résistante...
+ Peut-être faudrait-il les laisser se réguler d'elles-mêmes, au risque de
+ perdre un écosystème connu et aimé ?
+\end_layout
+
+\begin_layout Standard
+Un autre constat, de cette visite lacustre, est le contraste entre l'ouest
+ et l'est.
+ À l'ouest se trouvent des marais et des champs pâturés, où l'on se laisse
+ aller à la contemplation.
+ À l'est, le paysage est plus fermé et composé de cultures maraîchères.
+ Nous nous y sommes sentis oppressés.
+\end_layout
+
+\begin_layout Standard
+Il y aurait eu tant d'autres observations à faire en ce lieu.
+ Mais notre itinéraire filait vers de nouveaux horizons.
+ Nous y reviendrons cependant, car toutes les saisons apportent, à ce bel
+ écosystème, son lot de nouveaux occupants.
+\end_layout
 \end_body
 \end_document
