Add the text : Le concombre nous maudit

--- a/main.lyx
+++ b/main.lyx
@@ -2762,5 +2762,150 @@ Il y aurait eu tant d'autres observations à faire en ce lieu.
  Nous y reviendrons cependant, car toutes les saisons apportent, à ce bel
  écosystème, son lot de nouveaux occupants.
 \end_layout
+
+\begin_layout Section*
+Le concombre nous maudit
+\end_layout
+
+\begin_layout Standard
+\paragraph_spacing single
+
+\size small
+Rappel des faits.
+\end_layout
+
+\begin_layout Standard
+\paragraph_spacing single
+
+\size small
+Souvenez-vous : en mai\SpecialChar \nobreakdash-
+juin
+\begin_inset space ~
+\end_inset
+
+2011, plus de 4000
+\begin_inset space ~
+\end_inset
+
+personnes (en Allemagne principalement) ont été contaminées par la bactérie
+ 
+\emph on
+Escherichia coli O104:H4
+\emph default
+.
+ Cette grave crise sanitaire -- ayant fait une cinquantaine de morts --
+ a été erronément appelée 
+\begin_inset Quotes fld
+\end_inset
+
+crise du concombre
+\begin_inset Quotes frd
+\end_inset
+
+, à cause du soupçon porté au départ sur des lots de concombres biologiques
+ en provenance du sud de l'Espagne
+\end_layout
+
+\begin_layout Standard
+\paragraph_spacing single
+
+\size small
+Dès son début, une véritable hystérie culinaire -- envers les légumes crus
+ en général, et le concombre en particulier -- s'est emparée des consommateurs,
+ largement attisée et amplifiée par l'alarmisme des autorités sanitaires
+ et le sensationnalisme des médias de masses.
+ En fin de compte, l'épidémie a certainement été causée par des graines
+ germées.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Le concombre nous maudit ! Que dis-je ? Ce sont les concombres, par tonnes,
+ qui nous maudissent.
+ Nous autres, couillons d'hommes, qui nous gavons des produits (souvent
+ dégueulasses) de supermarchés et qui sommes promptes, tout d'un coup, à
+ en dédaigner certains ! Comme le concombre – qu'il soit d'Espagne, de France
+ et même du producteur du coin – parce que le couillon d'homme aura pris
+ le JT pour une messe, et aura confondu 
+\begin_inset Quotes fld
+\end_inset
+
+journaliste
+\begin_inset Quotes frd
+\end_inset
+
+ et 
+\begin_inset Quotes fld
+\end_inset
+
+oracle
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Nous avons abandonné un légume – produit simple et non transformé – alors
+ que la plupart d'entre nous mangeons de la merde – hyper transformée, grasse,
+ saturée en sel...
+ – faisant confiance à l'industrie agroalimentaire, où se créent et se condition
+nent de vastes supercheries.
+\end_layout
+
+\begin_layout Standard
+Au détour d'un chemin terreux, au sud de la Loire\SpecialChar \nobreakdash-
+Atlantique, nous sommes
+ tombés sur un charnier de concombres.
+ Des centaines et des centaines écrasés, fracassés par leurs propres pères
+ producteurs, parce qu'une peur hystérique s'était emparée des consommateurs.
+ Ont-ils eu l'effroi, tout d'un coup, de mourir d'un concombre ? Qu'ils
+ se rassurent ; ils s'empoisonnent bien assez, chaque jour ! Nous qui en
+ mangions très peu, nous en avons ramassé deux, encore vivants.
+ Ils furent bons, ne nous provoquant ni diarrhée ni mort subite.
+\end_layout
+
+\begin_layout Standard
+Cette bêtise collective et ce massacre de masse ont permis – au moins –
+ de nous faire découvrir ce légume (il est plein d'eau et facile à ranger
+ dans un sac à dos).
+ L'hystérie culinaire de ce mois de juin apprendra à l'homme occidental,
+ peut-être, à éteindre sa télé et à manger son concombre.
+ Elle pourrait lui apprendre, aussi, à chercher les bons produits là où
+ ils se trouvent (généralement pas dans les supermarchés).
+ De nombreuses alternatives de consommation (plus saines et pas plus chères)
+ existent : les AMAP
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+AMAP pour 
+\begin_inset Quotes fld
+\end_inset
+
+Association pour le Maintien d'une Agriculture Paysanne
+\begin_inset Quotes frd
+\end_inset
+
+.
+\begin_inset Newline newline
+\end_inset
+
+Voir par exemple le site Web 
+\emph on
+miramap.org
+\emph default
+ .
+\end_layout
+
+\end_inset
+
+, les épiceries bio, les producteurs du coin au marché du coin, votre propre
+ potager ou un potager collectif.
+\end_layout
+
 \end_body
 \end_document
