Text "Cap à l'est !" : little terminological corrections

--- a/main.lyx
+++ b/main.lyx
@@ -2413,10 +2413,10 @@ Flor
 ent\SpecialChar \nobreakdash-
 le\SpecialChar \nobreakdash-
 Vieil, récupérant le sentier de grande randonnée n°3.
- Parcourant les vignes, les vallons et les moulins à vent d'Anjou, vers
- Saumur puis Montsoreau, elles sont passées en Touraine, traversant ses
- vastes forêts et ses plaines inondées de tournesols et de blé, ponctuées
- çà et là de cités médiévales.
+ Longeant les vignes, les vallons et les moulins à vent d'Anjou, vers Saumur
+ puis Montsoreau, elles sont passées en Touraine, traversant ses vastes
+ forêts et ses plaines inondées de tournesols et de blé, ponctuées çà et
+ là de cités médiévales.
  Ces milliers de foulées sont arrivées à Mézières\SpecialChar \nobreakdash-
 en\SpecialChar \nobreakdash-
 Brenne, au pied de deux
@@ -2490,7 +2490,7 @@ Ces pensées filent, voguant sur de vastes mers : celles du vagabondage,
 
 \begin_layout Standard
 Des trésors, nos pas et nos coups de bâton en trouvent aussi : dans les
- plaines ou sur les vallons, au bord des chemins, au fond des champs, au
+ plaines ou sur les coteaux, au bord des chemins, au fond des champs, au
  cœur des forêts, sur les rivières et les étangs, et dans le lointain des
  horizons.
  Un ciel aux nuages massifs époustouflants ; ou un autre, déchiré et chaleureux.
